[gd_scene load_steps=9 format=3 uid="uid://c1k6qqj628ene"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_vl7cm"]
[ext_resource type="Texture2D" uid="uid://b0xsj6cp6x2e6" path="res://Menu_.png" id="2_pqdsm"]
[ext_resource type="Texture2D" uid="uid://dnpnsg6bsfoxi" path="res://UI_Titulo.png" id="3_4q1bc"]
[ext_resource type="Texture2D" uid="uid://djapk8s2sttga" path="res://UI_tutorial_Escrito.png" id="4_tj074"]
[ext_resource type="PackedScene" uid="uid://b2yrjlexgqqvi" path="res://audio-manager/AudioManager.tscn" id="4_ww4ga"]
[ext_resource type="AudioStream" uid="uid://bx0lbq6yy6blk" path="res://audio/Entry.mp3" id="5_g8x83"]
[ext_resource type="Texture2D" uid="uid://ddgq7bm4r7qbh" path="res://UI_tutorial_Botoes.png" id="5_gyc3h"]
[ext_resource type="AudioStream" uid="uid://d36j3ut8wdfef" path="res://audio/Gladiators.mp3" id="6_wdvag"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vl7cm")

[node name="Bkground" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pqdsm")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="TextureRect" parent="Main"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -591.0
offset_right = 591.0
offset_bottom = 473.0
grow_horizontal = 2
texture = ExtResource("3_4q1bc")

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -133.0
offset_right = -73.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.035, 3.035)

[node name="StartButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
text = "Start"

[node name="TutorialButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "How to play?"

[node name="QuitButton" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HowToPlayScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="HowToPlayScreen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -486.5
offset_top = -486.5
offset_right = 486.5
offset_bottom = 486.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_tj074")

[node name="TextureRect2" type="TextureRect" parent="HowToPlayScreen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -459.0
offset_top = -172.0
offset_right = 544.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_gyc3h")

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlayScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -70.0
offset_right = 143.0
offset_bottom = -39.0
grow_vertical = 0

[node name="Back" type="Button" parent="HowToPlayScreen/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="AudioManager" parent="." instance=ExtResource("4_ww4ga")]
music = Array[Resource]([ExtResource("5_g8x83"), ExtResource("6_wdvag")])

[connection signal="pressed" from="Main/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HowToPlayScreen/VBoxContainer/Back" to="." method="_on_back_pressed"]
